- Changed: Gameplay change. In the normal non TT versions FARPs are no longer available at mission start. They now have to be retaken in side missions to make them available for respawn.
- Changed: Pylon loadout no longer available at FARPs, only at bases and additional respawn points
- Changed: Service points should now also work on water (for boats for example)
- Changed: AI barrack bunkers at main targets are now a little bit more sheltered
- Fixed: When using earplugs in the TT version a dialog error appeared because of a missing gui baseclass
- Fixed: Heli lift script did break with an error message when the mass of the lift object was lower than the max load of the chopper
- Fixed: When a player changed the TeamSwitch key in the A3 settings when the mission was running the mission didn't pick up the new key
- Fixed: Added missing items like goggles in Virtual Arsenal in ranked mode
- Fixed: Some colors in the game class CfgMarkerColors are stored as string instead of number resulting in broken 3D marker drawing
- Fixed: Target select entire map caused a script error
- Fixed: Possible script error in fn_spectdraw3d.sqf
- Fixed: Side cache mission could break when no building with positions were available or buildings were null
- Fixed: "Data uploaded!" message was displayed when the data upload was iterrupted and not when the data was uploaded in the transfer data sidemisssions
- Fixed: The GMCWG winter version did use some wrong class names for winter units
- Fixed: The Chernarus autumn and winter versions still had the editor placed Teleporter marker at base
- Fixed: Script error in StatusDialog
- Fixed: Cache side mission now really works, no more you are too close to a ammo box message anymore
- Improved: Boats can now also be used as MHQs (needs empty cargo positions to spawn into a boat and can't load ammo boxes but doesn't need to get deployed)
- Updated: Russian translation by Babayka
- Updated: Chineseimp translation by CHL198011