@@ -48,5 +48,6 @@ ATTENTION2: domination-custom.ini has changed; And missionsave table in the SQL 
 - Fixed: Script error in StatusDialog
 - Fixed: Cache side mission now really works, no more you are too close to a ammo box message anymore
 - Improved: Boats can now also be used as MHQs (needs empty cargo positions to spawn into a boat and can't load ammo boxes but doesn't need to get deployed)
+- Improved: Boats can be pushed if they are on the beach
 - Updated: Russian translation by Babayka
 - Updated: Chineseimp translation by CHL198011
