@@ -35,6 +35,10 @@ if (d_with_ranked) then {
 	clearWeaponCargoGlobal _vec;
 };
 
+if (_vec isKindOf "Boat_F" || {_vec isKindOf "Boat"}) then {
+	_vec remoteExecCall ["d_fnc_addpushaction", [0, -2] select isDedicated];
+};
+
 while {true} do {
 	sleep (_delay + random 5);
 
@@ -83,6 +87,9 @@ while {true} do {
 		
 		if (d_with_ranked) then {
 			clearWeaponCargoGlobal _vec;
+		};
+		if (_vec isKindOf "Boat_F" || {_vec isKindOf "Boat"}) then {
+			_vec remoteExecCall ["d_fnc_addpushaction", [0, -2] select isDedicated];
 		};
 	};
 };
