@@ -3,3 +3,4 @@ STR_DOM_MISSIONSTRING_1977
 STR_DOM_MISSIONSTRING_1987
 STR_DOM_MISSIONSTRING_CRASH
 STR_DOM_MISSIONSTRING_PRISONERS
+STR_DOM_MISSIONSTRING_2033
