@@ -310,3 +310,4 @@ STR_DOM_MISSIONSTRING_2031
 STR_DOM_MISSIONSTRING_2032
 STR_DOM_MISSIONSTRING_CRASH
 STR_DOM_MISSIONSTRING_PRISONERS
+STR_DOM_MISSIONSTRING_2033
